appId: com.borrowhood.app
name: "View Badges and Leaderboard"
tags:
  - obsolete
---
- launchApp
- tapOn: "Profile"
- tapOn: "Badges"
- assertVisible: "My Badges"
- tapOn: "Leaderboard"
- assertVisible: "Leaderboard"
- back
